--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<!-- wp:template-part {"slug":"header","tagName":"header"} /-->
+<!-- wp:template-part {"slug":"header","tagName":"header","theme":"sendig"} /-->
 
 <!-- wp:query {"tagName":"main","layout":{"inherit":true}} -->
 <main class="wp-block-query">
@@ -8,12 +8,12 @@
 		<!-- wp:post-title {"isLink":true} /-->
 		<!-- wp:post-featured-image {"isLink":true} /-->
 		<!-- wp:post-content /-->
-		<!-- wp:group {"layout":{"type":"flex"}, "style":{"typography":{"fontSize":"14px"}}} -->
+		<!-- wp:group {"layout":{"type":"flex"},"style":{"typography":{"fontSize":"14px"}}} -->
 		<div class="wp-block-group" style="font-size:14px">
 			<!-- wp:post-author {"showAvatar":false,"showBio":false} /-->
 			<!-- wp:post-date {"isLink":true} /-->
 			<!-- wp:post-terms {"term":"category"} /-->
-			<!-- wp:post-terms {"term": "post_tag"} /-->
+			<!-- wp:post-terms {"term":"post_tag"} /-->
 		</div>
 		<!-- /wp:group -->
 		<!-- wp:spacer {"height":40} -->
@@ -36,4 +36,4 @@
 	</main>
 <!-- /wp:query -->
 
-<!-- wp:template-part {"slug":"footer","tagName":"footer"} /-->
+<!-- wp:template-part {"slug":"footer","tagName":"footer","theme":"sendig"} /-->
