Adding custom block theme styles

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: Sendig
 Theme URI: https://github.com/jonathanbossenger/sendig
-Author: Emily Rapport, Jonathan Bossenger
+Author: Emily Rapport, Jonathan Bossenger, Aurooba Ahmed
 Author URI: 
 Description: A new WordPress block theme design
 Requires at least: 6.2
